1. Improve Argument parsing