@@ -1,1 +1,2 @@
 mkdotenv
+*.exe
